@@ -30,6 +30,8 @@ Decorated log: https://github.com/hoffstadt/DearPyGui/releases/tag/v0.1.0-beta6
 
 New Commands:
 
+- Fonts: new command add_additional_font
+
 - Styles: new command set_style_window_padding
 - Styles: new command set_style_frame_padding
 - Styles: new command set_style_item_spacing
